AperoPHP : correction #58 - Amélioration des contrastes couleurs de textes par rapport au fond

--- a/assets/apero.less
+++ b/assets/apero.less
@@ -27,11 +27,10 @@ textarea {
   font-family: 'Open Sans';
 }
 
-a.btn {
+.btn {
     color: #4269C1;
 }
-a[class^="btn-"],
-a[class*=" btn-"] {
+.btn-primary {
     color: @white;
 }
 .btn-icon-only {
