--- a/web/css/bootstrap.css
+++ b/web/css/bootstrap.css
@@ -5366,12 +5366,11 @@ textarea {
   font-family: 'Open Sans';
 }
 
-a.btn {
+.btn {
   color: #4269C1;
 }
 
-a[class^="btn-"],
-a[class*=" btn-"] {
+.btn-primary {
   color: #ffffff;
 }
 
